--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "chart.js": "^4.4.0",
+    "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
     "lucide-react": "^0.294.0",
     "next": "^14.2.35",
     "react": "^18",
